# codegen_wizard

./: graph (1).json  graph copy.json  graph.json  index.html  index.ts  package-lock.json  package.json  pyproject.toml  test.html  tsconfig.json
src/codegen_wizard/: cli.py  registry.py
src/codegen_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codegen_wizard/engine/: models.py  renderer.py
src/codegen_wizard/generators/bezier/: __init__.py  prompts.py
src/codegen_wizard/generators/bezier/templates/: matlab.j2  python.j2
