[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["codegen_wizard"]

#声明核心依赖与entry-points
[project]
name = "codegen-wizard"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]            # 安装后可用 `codegen-wizard`
codegen-wizard = "codegen_wizard.cli:main"

[project.entry-points."codegen_wizard.generators"]
bezier = "codegen_wizard.generators.bezier"